[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/ChakraPetch-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/ChakraPetch-SemiBold.tres" type="DynamicFont" id=3]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.75, 0.165, 0.165, 0.290196 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HealthLabel" type="Label" parent="."]
material = SubResource( 1 )
margin_right = 35.0
margin_bottom = 14.0
text = "HP: 0"

[node name="GameOverScreen" type="Panel" parent="."]
margin_left = 318.0
margin_top = 101.0
margin_right = 718.0
margin_bottom = 501.0
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="GameOverScreen"]
margin_left = -11.0
margin_right = 411.0
margin_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "you are dead"
align = 1
valign = 1
uppercase = true

[node name="RestartButton" type="Button" parent="GameOverScreen"]
margin_left = 130.0
margin_top = 227.0
margin_right = 280.0
margin_bottom = 275.0
custom_fonts/font = ExtResource( 3 )
text = "try again"

[connection signal="pressed" from="GameOverScreen/RestartButton" to="." method="_on_RestartButton_pressed"]
